RESOLVED FIXED69099
[Freetype] Some text in Planet GNOME renders in the wrong place
https://bugs.webkit.org/show_bug.cgi?id=69099
Summary [Freetype] Some text in Planet GNOME renders in the wrong place
Martin Robinson
Reported 2011-09-29 12:33:41 PDT
This seems to be an issue with custom fonts which use synthetic oblique rendering.
Attachments
Patch (22.38 KB, patch)
2011-09-29 12:43 PDT, Martin Robinson
no flags
Martin Robinson
Comment 1 2011-09-29 12:43:26 PDT
Dirk Schulze
Comment 2 2011-09-29 12:54:39 PDT
Comment on attachment 109189 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=109189&action=review Just one comment to the test. > LayoutTests/platform/gtk/fonts/synthetic-oblique-positioning.html:26 > +This test verifies that the CTM does not cause text that has > +a synthetic oblique to render in the wrong part of the page. > +You should be able to see three separate block characters below > +and the middle should be rendered in italic. To be honest, I don't think that it makes sense to use Ahem on the one side, but print the description on the screen as well. Would it be enough to insert it as a HTML comment?
Martin Robinson
Comment 3 2011-09-29 15:22:26 PDT
(In reply to comment #2) Thanks for the review! > > LayoutTests/platform/gtk/fonts/synthetic-oblique-positioning.html:26 > > +This test verifies that the CTM does not cause text that has > > +a synthetic oblique to render in the wrong part of the page. > > +You should be able to see three separate block characters below > > +and the middle should be rendered in italic. > > To be honest, I don't think that it makes sense to use Ahem on the one side, but print the description on the screen as well. Would it be enough to insert it as a HTML comment? You're right that it seems a bit weird to use Ahem. Traditionally it's used because it's consistent across platforms. in this case I used it because it's a custom font that already exists in the tree and doesn't present any licensing issues. If you still think this bit should be an HTML comment, I'm quite happy to do that though.
Martin Robinson
Comment 4 2011-09-29 16:46:39 PDT
Martin Robinson
Comment 5 2011-09-29 17:33:21 PDT
Comment on attachment 109189 [details] Patch Landed this one after converting the text to a coment.
Note You need to log in before you can comment on or make changes to this bug.